--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "1.0.0",
   "description": "UserOP examples",
   "main": "index.ts",
-  "type": "module",
   "scripts": {
-    "start": "tsx index.ts",
-    "entrypoint-v0.7": "tsx entryPointV07.ts"
+    "entrypoint-v0.6": "npx ts-node entryPointV06.ts",
+    "entrypoint-v0.7": "npx ts-node entryPointV07.ts"
   },
   "author": "Shunsuke Watanabe",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "permissionless": "^0.2.0",
-    "viem": "^2.20.0"
   },
   "devDependencies": {
+    "dotenv": "^16.3.1",
+    "@account-abstraction/sdk": "^0.6",
     "@types/node": "^20.11.10",
+    "ethers": "^5.7",
+    "ts-node": "^10.9.1",
     "tsx": "^3.13.0"
   }
 }
